--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -19,11 +19,11 @@
                 <editor role="projectEditor" xml:id="UT22084-091-009-26">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +89,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-21T14:34:56.068Z" type="text-version" status="0.0.9" xml:id="UT22084-091-009-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:54:44.587Z" type="translation-status" status="2.e" xml:id="UT22084-091-009-30">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:54:44.587Z" type="text-version" status="0.0.10" xml:id="UT22084-091-009-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
