--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-091-040-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-12T15:19:47.95Z" type="text-version" status="0.0.7" xml:id="UT22084-091-040-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:56:59.4Z" type="translation-status" status="2.e" xml:id="UT22084-091-040-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:56:59.4Z" type="text-version" status="0.0.8" xml:id="UT22084-091-040-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
