--- a/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
+++ b/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
@@ -22,7 +22,7 @@
         <editor role="TEImarkupEditor" xml:id="UT22084-072-021-65">Sameer Dhingra</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.18 <date>2024</date>
+                <edition>v 0.0.19 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2.a">
+        <availability status="2">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -137,6 +137,12 @@
         </change>
                 <change who="#konchog" when="2024-02-27T01:42:00.448Z" type="text-version" status="0.0.18" xml:id="UT22084-072-021-287">
                     <desc>A few fixes in the introduction.</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-28T15:27:22.559Z" type="translation-status" status="2" xml:id="UT22084-072-021-288">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-28T15:27:22.559Z" type="text-version" status="0.0.19" xml:id="UT22084-072-021-289">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
