--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -8,23 +8,22 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Śārdūlakarṇāvadāna</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">stag rna'i rtogs pa brjod pa/</title>
                 <title type="otherTitle" xml:lang="en">The Story of Śārdūlakarṇa</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Śārdūlakarṇāvadāna</title>
                 <title type="otherTitle" xml:lang="zh">《虎耳譬喻經》 (大正藏：摩登伽經)</title>
-                <author role="translatorMain" xml:id="UT22084-076-012-1"/>
+                <author role="translatorMain" xml:id="UT22084-076-012-1">Bodhinidhi Translation Group</author>
                 <editor role="externalReviewer" xml:id="UT22084-076-012-2">Kurtis Schaeffer</editor>
-                <editor role="projectEditor" xml:id="UT22084-076-012-3">Dr. Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-076-012-3">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-076-012-4">David Higgins</editor>
                 <author role="translatorEng" xml:id="UT22084-076-012-5">Thomas Cruijsen</author>
                 <consultant role="projectManager" xml:id="UT22084-076-012-6">Thomas Cruijsen</consultant>
                 <sponsor xml:id="UT22084-076-012-7">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2024</date>
+                <edition>v 0.1.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-076-012"/>
                 <date/>
             </publicationStmt>
@@ -63,6 +62,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-14T13:12:58.664Z" type="text-version" status="0.1.3" xml:id="UT22084-076-012-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T13:13:36.383Z" type="text-version" status="0.1.4" xml:id="UT22084-076-012-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-28T16:47:52.977Z" type="translation-status" status="2.e" xml:id="UT22084-076-012-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-28T16:47:52.977Z" type="text-version" status="0.1.5" xml:id="UT22084-076-012-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
