--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -40,7 +40,7 @@
                 <editor role="projectEditor" xml:id="UT22084-063-001-8135">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.3.7 <date>2024</date>
+                <edition>v 1.3.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -314,6 +314,9 @@
                 </change>
                 <change who="#john" when="2024-02-28T21:29:46.162Z" type="text-version" status="1.3.7" xml:id="UT22084-063-001-8210">
                     <desc>Added Konchog's proofreading suggestions.</desc>
+                </change>
+                <change who="#konchog" when="2024-02-28T22:53:08.136Z" type="text-version" status="1.3.8" xml:id="UT22084-063-001-8211">
+                    <desc>Tagged the trailer as such, and put titles there in quotation marks.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -7034,18 +7037,17 @@
                                                 gods, humans, asuras, and gandharvas rejoiced and
                                                 praised the words of the Blessed One.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-634"/>
-                                        <p tid="591">This concludes the Great Vehicle sūtra entitled
-                                                  <title xml:lang="en">Discernment of the
-                                                  Discourses</title>,<note place="end" xml:id="UT22084-063-001-635"> Above, this was
+                                        <trailer tid="591">This concludes the Great Vehicle sūtra entitled
+                                                “<title xml:lang="en">Discernment of the
+                                                        Discourses</title>,”<note place="end" xml:id="UT22084-063-001-635"> Above, this was
                                                   called <title xml:lang="en">Higher Discernment of
-                                                  the Dharma</title>.</note> as well as <title xml:lang="en">The Great Vehicle Discourse on
-                                                  Liberation</title>
-                        <note place="end" xml:id="UT22084-063-001-636"> Translation based on
+                                                          the Dharma</title>.”</note> as well as “<title xml:lang="en">The Great Vehicle Discourse on
+                                                                  Liberation</title>,”<note place="end" xml:id="UT22084-063-001-636"> Translation based on
                                                           the Stok Palace Kangyur reading: <foreign xml:lang="Bo-Ltn" type="term">rnam par thar pa.</foreign> Degé
                                                   reads: <foreign xml:lang="Bo-Ltn" type="term">rnam
-                                                  par ’thag pa</foreign> (“Victory”).</note> and
-                                                  <title xml:lang="en">The Buddha’s Collected Teachings</title>, 
-                                                and <title xml:lang="en">Repudiating Those Who Violate the Discipline</title>.</p>
+                                                  par ’thag pa</foreign> (“Victory”).</note>
+                                                “<title xml:lang="en">The Buddha’s Collected Teachings</title>,” 
+                                                and “<title xml:lang="en">Repudiating Those Who Violate the Discipline</title>.”</trailer>
                                 </div>
                                 <div type="colophon" xml:id="UT22084-063-001-colophon">
                                         <head type="colophon" tid="611">Colophon</head>
