--- a/translations/kangyur/placeholders/096-066_toh817,1101-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-066_toh817,1101-verses_of_wellwishing.xml
@@ -5,10 +5,15 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bde legs kyi tshigs su bcad pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">svastigāthā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Svastigāthā</title>
                 <title type="mainTitle" xml:lang="en">Verses of Well-wishing</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-096-066"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,9 +36,19 @@
                     <idno source-id="O1JC114941JC12865" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:09:15 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-066-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:04:45.622Z" type="translation-status" status="4" xml:id="UT22084-096-066-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:04:45.622Z" type="text-version" status="0.0.1" xml:id="UT22084-096-066-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
