--- a/translations/kangyur/placeholders/101-153_toh1097-the_prayer_of_sublime_action.xml
+++ b/translations/kangyur/placeholders/101-153_toh1097-the_prayer_of_sublime_action.xml
@@ -5,10 +5,15 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchog gi spyod pa'i smon lam/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">agracāryapraṇidhāna</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Agracāryapraṇidhāna</title>
                 <title type="mainTitle" xml:lang="en">The Prayer of Sublime Action</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-101-153"/>
             </publicationStmt>
             <sourceDesc>
@@ -22,9 +27,19 @@
                     <idno source-id="O1JC114941JC12861" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:09:11 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-101-153-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:06:17.903Z" type="translation-status" status="4" xml:id="UT22084-101-153-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:06:17.903Z" type="text-version" status="0.0.1" xml:id="UT22084-101-153-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
