--- a/translations/kangyur/placeholders/101-163_toh1107-verses_expressing_auspiciousness.xml
+++ b/translations/kangyur/placeholders/101-163_toh1107-verses_expressing_auspiciousness.xml
@@ -12,14 +12,19 @@
                 <title xml:lang="en" type="longTitle">Verses Expressing Auspiciousness, from the Chapter of the Merchants Trapuṣa and Bhallika in the Lalitavistara Sūtra</title>
                 <title xml:lang="en" type="otherTitle">[Note: from the 24th chapter of “The Play in Full” (Lalitavistara), Toh 95]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-101-163"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1107" type="text">
                     <ref>Toh 1107</ref>
                     <biblScope>vol.101, ff.275v-278r(pp.550-555)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-101-163-1">Anon</author>
                     <location work="UT4CZ5369" count-pages="6">
                         <volume number="101" start-page="550" end-page="555"/>
                     </location>
@@ -29,7 +34,7 @@
                 <bibl key="toh4405" type="text">
                     <ref>Toh 4405</ref>
                     <biblScope>ff. 342r-343v</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-101-163-2">Anon</author>
                     <location work="UT23703" count-pages="4">
                         <volume number="207" start-page="683" end-page="686"/>
                     </location>
@@ -37,10 +42,21 @@
                     <idno source-id="O1JC76301JC112111JC21748" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-11T10:26:10.382Z" user="admin">11/11/2021 10:26:10</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4398-4464_PH_new_v2.4.xml" date-time="2021-11-02T14:27:22.591Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:27:22.591Z" type="import" xml:id="UT22084-101-163-3" source="tengyur-data-4398-4464_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-101-163-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:06:56.884Z" type="translation-status" status="4" xml:id="UT22084-101-163-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T12:06:56.884Z" type="text-version" status="0.0.1" xml:id="UT22084-101-163-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
