--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -40,7 +40,7 @@
                 <editor role="projectEditor" xml:id="UT22084-063-001-8135">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.3.8 <date>2024</date>
+                <edition>v 1.3.10 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -317,6 +317,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-28T22:53:08.136Z" type="text-version" status="1.3.8" xml:id="UT22084-063-001-8211">
                     <desc>Tagged the trailer as such, and put titles there in quotation marks.</desc>
+                </change>
+                <change who="#john" when="2024-02-29T12:13:08.873Z" type="text-version" status="1.3.10" xml:id="UT22084-063-001-8212">
+                    <desc>No edits but to resolve duplicated version numbering.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
