--- a/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
+++ b/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
@@ -10,17 +10,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṅgulimālīyanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sor mo'i phreng ba la phan pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《央掘魔羅經》</title>
-                <author role="translatorMain" xml:id="UT22084-062-013-1">Buddhavacana Translation Group</author>
-                <author role="translatorEng" xml:id="UT22084-062-013-2">Casey Kemp</author>
                 <sponsor xml:id="UT22084-062-013-4">Frank Lyn and Ivy Lai</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2023</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-062-013"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +75,15 @@
                     <desc>4</desc>
                 </change>
                 <change who="#andreas" when="2023-11-13T08:50:32.933Z" type="text-version" status="0.0.7" xml:id="UT22084-062-013-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T10:59:26.52Z" type="text-version" status="0.0.8" xml:id="UT22084-062-013-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T13:26:40.472Z" type="translation-status" status="3" xml:id="UT22084-062-013-20">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T13:26:40.472Z" type="text-version" status="0.0.9" xml:id="UT22084-062-013-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
