--- a/translations/kangyur/placeholders/083-022_toh474-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-022_toh474-the_tantra_of_red_yamari.xml
@@ -5,19 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Tantra of Red Yamāri</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">raktayamāritantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Raktayamāritantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed dmar po'i rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīraktayamāritantrarājanāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrīraktayamāritantrarājanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal gshin rje gshed dmar po zhes bya ba'i rgyud kyi rgyal po/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-083-022-1"/>
+                <author role="translatorEng" xml:id="UT22084-083-022-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-022"/>
                 <date/>
             </publicationStmt>
@@ -32,13 +33,30 @@
                     <idno source-id="O1JC114941JC12186" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:53:26.213Z" user="admin">16/12/2022 09:53:26</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:52:52.539Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:52:52.539Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:53:20.511Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-083-022-3">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:52:52.539Z" type="translation-status" status="3" xml:id="UT22084-083-022-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:52:52.539Z" type="text-version" status="0.0.2" xml:id="UT22084-083-022-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:53:20.511Z" type="text-version" status="0.0.3" xml:id="UT22084-083-022-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-083-022-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T14:00:07.012Z" type="translation-status" status="2.h" xml:id="UT22084-083-022-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T14:00:07.012Z" type="text-version" status="0.0.5" xml:id="UT22084-083-022-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
