--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-003-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-003-13">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-003-22">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-003-32">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +98,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-15T09:39:02.353Z" type="text-version" status="0.0.11" xml:id="UT22084-088-003-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T14:06:56.632Z" type="text-version" status="0.0.12" xml:id="UT22084-088-003-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T14:50:31.163Z" type="translation-status" status="2.b" xml:id="UT22084-088-003-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T14:50:31.163Z" type="text-version" status="0.0.13" xml:id="UT22084-088-003-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
