--- a/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
+++ b/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">seng+ge sgra'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Siṃhanādatantranāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">seng ge sgra'i rgyud ces bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-093-017-1"/>
+                <author role="translatorMain" xml:id="UT22084-093-017-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-017-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-093-017-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-093-017"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +57,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-24T11:56:05.238Z" type="text-version" status="0.0.5" xml:id="UT22084-093-017-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:56:44.455Z" type="text-version" status="0.0.6" xml:id="UT22084-093-017-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:42:56.553Z" type="translation-status" status="2.f" xml:id="UT22084-093-017-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:42:56.553Z" type="text-version" status="0.0.7" xml:id="UT22084-093-017-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
