--- a/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
@@ -7,15 +7,16 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Lion's Roar</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-093-019-1"/>
+                <author role="translatorMain" xml:id="UT22084-093-019-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-019-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-093-019-11">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-093-019"/>
                 <date/>
             </publicationStmt>
@@ -30,9 +31,7 @@
                     <idno source-id="O1JC114941JC12444" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="title" date-time="2022-04-27T15:56:00.73Z" user="john">Essentially the same text as Toh 912, and translated by the same translators, but a slightly different recension with a different title. Also closely related to Toh 3156 which is translated by a different translator and has further differences in content.</note>
-            </notesStmt>
+            <notesStmt/>
             <revisionDesc>
                 <change who="#line-tofte" when="2022-05-19T13:40:38.631Z" type="translation-status" status="2.h" xml:id="UT22084-093-019-3">
                     <desc>2.h</desc>
@@ -50,6 +49,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-24T11:58:16.277Z" type="text-version" status="0.0.5" xml:id="UT22084-093-019-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:58:50.029Z" type="text-version" status="0.0.6" xml:id="UT22084-093-019-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:54:24.796Z" type="translation-status" status="2.f" xml:id="UT22084-093-019-13">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:54:24.796Z" type="text-version" status="0.0.7" xml:id="UT22084-093-019-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
