--- a/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
+++ b/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
@@ -6,17 +6,18 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Siṃhanāda Dhāraṇī</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Siṃhanāda­dhāraṇī</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra'i gzungs/</title>
                 <title type="mainTitle" xml:lang="bo">སེང་གེ་སྒྲའི་གཟུངས།</title>
-                <author role="translatorMain" xml:id="UT23703-075-017-1"/>
+                <title type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra'i gzungs/</title>
+                <author role="translatorMain" xml:id="UT23703-075-017-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT23703-075-017-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT23703-075-017-16">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT23703-075-017"/>
                 <date/>
             </publicationStmt>
@@ -33,9 +34,7 @@
                     <idno source-id="O1JC76301JC9779" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="title" date-time="2022-04-27T16:00:08.615Z" user="john">Closely related to Toh 704 and 912, which are two slightly different recensions both translated by the same (different) translator and have further differences in content.</note>
-            </notesStmt>
+            <notesStmt/>
             <revisionDesc>
                 <change who="#admin" when="2021-11-02T14:02:09.954Z" type="import" xml:id="UT23703-075-017-5" source="tengyur-data-3140-3222_PH_new_v2.4.xml">
                     <desc/>
@@ -62,6 +61,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-24T11:59:31.854Z" type="text-version" status="0.0.6" xml:id="UT23703-075-017-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T12:00:06.159Z" type="text-version" status="0.0.7" xml:id="UT23703-075-017-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:59:43.328Z" type="translation-status" status="2.f" xml:id="UT23703-075-017-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-29T15:59:43.328Z" type="text-version" status="0.0.8" xml:id="UT23703-075-017-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
