--- a/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
+++ b/translations/kangyur/placeholders/009-001_toh4-bhiksunis_pratimoksa_sutra.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Bhikṣunīs’ Prātimokṣa Sūtra</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bhikṣunīprātimokṣasūtra</title>
+                <title type="mainTitle" xml:lang="en">The Bhikṣuṇīs’ Prātimokṣa Sūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Bhikṣuṇīprātimokṣasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dge slong ma'i so sor thar pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="zh">《比丘尼波羅提木叉經》(大正藏:《根本說一切有部苾芻尼戒經》)</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-412">Annie Heckman</author>
+                <title type="mainTitle" xml:lang="zh">《波羅提木叉經》(大正藏:《根本說一切有部苾芻尼戒經》)</title>
+                <author role="translatorMain" xml:id="UT22084-009-001-1"/>
+                <author role="translatorEng" xml:id="UT22084-009-001-2">Annie Heckman</author>
+                <sponsor xml:id="UT22084-009-001-12">中國宗薩寺彭措郎加堪布</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-009-001"/>
                 <date/>
             </publicationStmt>
@@ -23,8 +25,8 @@
                 <bibl key="toh4" type="text">
                     <ref>Toh 4</ref>
                     <biblScope>vol:9,ff.1r-25r(pp.1-49)</biblScope>
-                    <author role="translatorTib">t. dzi na mi tra (k)</author>
-                    <author role="translatorTib">cog ro klu'i rgyal mtshan</author>
+                    <author role="translatorTib" xml:id="UT22084-009-001-9">t. dzi na mi tra (k)</author>
+                    <author role="translatorTib" xml:id="UT22084-009-001-10">cog ro klu'i rgyal mtshan</author>
                     <location work="UT4CZ5369" count-pages="48">
                         <volume number="9" start-page="2" end-page="49"/>
                     </location>
@@ -32,14 +34,39 @@
                     <idno source-id="O1JC114941JC11512" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:27:36.551Z" user="admin">10/02/2023 13:27:36</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T17:03:23.262Z" user="john">Changed title to reflect Prātimokṣa decision</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T12:54:47.52Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T12:56:24.397Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-10T13:27:30.869Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2021-02-23T17:03:23.262Z" type="text-version" status="0.0.2" xml:id="UT22084-009-001-3">
+                    <desc>Changed title to reflect Prātimokṣa decision</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T12:54:47.52Z" type="translation-status" status="3" xml:id="UT22084-009-001-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T12:54:47.52Z" type="text-version" status="0.0.3" xml:id="UT22084-009-001-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T12:56:24.397Z" type="text-version" status="0.0.4" xml:id="UT22084-009-001-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#amy" when="2023-02-10T13:27:30.869Z" type="text-version" status="0.0.5" xml:id="UT22084-009-001-7">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-009-001-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-01-30T14:27:09.99Z" type="text-version" status="0.0.7" xml:id="UT22084-009-001-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-02-21T05:10:27.842Z" type="text-version" status="0.0.8" xml:id="UT22084-009-001-13">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T13:32:30.778Z" type="translation-status" status="2.g" xml:id="UT22084-009-001-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T13:32:30.778Z" type="text-version" status="0.0.9" xml:id="UT22084-009-001-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
