--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -4,20 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rten 'brel snying po'i cho ga'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pratītyasamutpāda­hṛdayavidhidhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Essence of Dependent Arising</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pratītyasamutpāda­hṛdayavidhidhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rten 'brel snying po'i cho ga'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryapratītyasamutpāda­hṛdayavidhidhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel bar 'byung ba'i snying po'i cho ga'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpāda­hṛdayavidhidhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten 'brel snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel par 'byung ba'i snying po'i cho ga'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpāda­hṛdayavidhidhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-013-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-013-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-013"/>
                 <date/>
             </publicationStmt>
@@ -41,9 +43,27 @@
                     <idno source-id="O1JC114941JC12742" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-20T06:57:51.253Z" user="admin">20/04/2023 06:57:51</note>    <note type="updated" update="translation-status" value="3" date-time="2023-04-20T06:57:46.473Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-04-20T06:57:46.473Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-04-20T06:57:46.473Z" type="translation-status" status="3" xml:id="UT22084-088-013-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-20T06:57:46.473Z" type="text-version" status="0.0.1" xml:id="UT22084-088-013-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-20T06:58:24.31Z" type="text-version" status="0.0.2" xml:id="UT22084-088-013-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-088-013-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T13:51:14.252Z" type="translation-status" status="2.h" xml:id="UT22084-088-013-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T13:51:14.252Z" type="text-version" status="0.0.4" xml:id="UT22084-088-013-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
