--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -10,13 +10,14 @@
                 <author role="translatorMain" xml:id="UT22084-071-013-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-071-013-2">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-071-013-13">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-071-013-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-08T08:09:11.372Z" type="text-version" status="0.0.8" xml:id="UT22084-071-013-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T08:09:48.75Z" type="text-version" status="0.0.9" xml:id="UT22084-071-013-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T14:27:04.409Z" type="translation-status" status="2.d" xml:id="UT22084-071-013-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T14:27:04.409Z" type="text-version" status="0.0.10" xml:id="UT22084-071-013-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
