--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-091-010-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-010-2">Adam Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-091-010-16">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-010-25">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-06T13:47:46.491Z" type="text-version" status="0.0.11" xml:id="UT22084-091-010-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:49:43.456Z" type="text-version" status="0.0.12" xml:id="UT22084-091-010-26">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T14:32:18.96Z" type="translation-status" status="2.d" xml:id="UT22084-091-010-27">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-01T14:32:18.96Z" type="text-version" status="0.0.13" xml:id="UT22084-091-010-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
