--- a/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-088-035-46">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -155,6 +155,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-03-01T13:43:05.592Z" type="text-version" status="1.0.0" xml:id="UT22084-088-035-116">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-03-02T18:46:06.02Z" type="text-version" status="1.0.1" xml:id="UT22084-088-035-117">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -414,7 +417,7 @@
             </div>
             <div type="appendix">
                 <head type="appendix" tid="32">Appendix</head>
-                <div type="section" xml:id="UT22084-088-035-appendix-1">
+                <div rend="ignoreGlossary" type="section" xml:id="UT22084-088-035-appendix-1">
                     <milestone unit="chunk" xml:id="UT22084-088-035-87"/>
                     <p tid="35">Constituted text of the Sanskrit based on how it is transmitted in
                         the <foreign xml:lang="Sa-Ltn" type="term">ādikarmika</foreign> manuals: </p>
@@ -434,7 +437,7 @@
                     </p>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-088-035-89">
